Added log4js & Cleaned-up the code
* Cleaned-up the Bot
+ Added log4js and implemented it
+ Added Microsoft redist 2013

--- a/foxedbot.js/package.json
+++ b/foxedbot.js/package.json
@@ -9,7 +9,8 @@
   },
   "private": true,
   "dependencies": {
-    "steam": "0.6.8"
+    "steam": "0.6.8",
+    "log4js": "0.6.22"
   },
   "engines": {
     "node": ">=0.12"
